public/style/styles.css
/* ... */
.collaborators-wrapper .well span,
.permissions-wrapper .well span,
.users-wrapper .well span {
  display: block;
}

.users-wrapper .well span.realname {
  font-style: italic;
}

.no-shadow {
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
#source-page .document-page,
#candidate-page .document-page{
  margin-top: 0;
}
#candidate-page .document-page,
#candidate-page .pager{
  margin-right: 5px;
}

.switch-two-columns {
  margin-top: -44px;
  padding-bottom: 6px;
}
#source-document {
  width: 100%;
}

.bibtex-line {
  padding: 0; /*2px 5px 5px 10px;*/
  margin: 0;
  clear: left;
}
.bibtex-line .bibtex-label {
  display: block;
  width: 100px;
  float: left;
  background-color: #EBECED;
  width: 30%;
}

.bibtex-line .bibtex-label span {
  padding: 5px 10px;
  display: block;
  
}

.bibtex-line .bibtex-content {
    display: block;
  float: left;
  width: 70%;

}
.bibtex-line .bibtex-content span {
    padding: 5px 10px;
    display: block;
}

.removed-element {
  text-decoration: line-through;
  color: #888C95;
  font-weight: normal;
}

/* ==|== media queries ====================================================== */

@media only screen and (max-width: 768px) {
  #main,
  .diff .src-wrapper,
  .zend_form .two-column-form,
  .layout-2-columns-equal .first,
  .layout-2-columns-equal .second
  {
    float: none;
    width: 100%;

  }

  nav#right-nav {
    margin-top: 20px;
    float:none;
    width: 100%;
    max-width: 100%;
  }

  .pagewrap {
    padding: 0 10px 10px 10px;
    width: auto;
  }

  header[role=toolbar] {
    padding: 5px 0;
  }

  header[role=toolbar] .content {
    margin: 0 10px;
    width: auto;
  }

  .top-alert .alert{ 
    margin: 0 10px;
    width: auto;
  }

  .src-wrapper {
    margin-top: 20px;
  }

  .case-settings-box > a {
    display: block;
    float: none;
    text-align: right;
    padding-right: 0;
  }

  .user-box {
    position: absolute;
    bottom: 0;
  }

  .float-right {
    float: right;
  }
}


@media only screen and (max-width: 500px) {

  .user-box{
    position: static;
    padding-left: 0;
    width: 100%;
    float: left;
  }

  .case-settings-box {
    float: right;
    width: 100%;
    margin-top: -26px;
  }

  .case-settings-box > a {
    display: none;
  }

  .case-settings-box form {
    min-width: 160px;
    width: 60%;
    float: right;
  }

  .case-settings-box .chzn-container {
    width: 100% !important;
  }

  .user-box .dropdown-button {
    width: 60%;
    min-width: 160px;
    float: right;
  }

  .user-box .avatar { 
    position: static;
    float: left;
  }

  header[role=toolbar] .content {
  }

  header[role=banner] h1 {
    width: 100%;
    left: 0;
  }

  header[role=banner] .navigation {
    text-align: center;
  }

  /* Force table to not be like tables anymore */
  table.default, table.default thead, table.default tbody, table.default th, table.default td, table.default tr { 
    display: block; 
  }

  /* Hide table headers (but not display: none;, for accessibility) */
  table.default thead tr { 
    position: absolute;
    top: -9999px;
    left: -9999px;
  }
  table.default tr {
    margin-bottom: 15px;
  }
  table.default td { 
    /* Behave  like a "row" */
    border: none;
    border-bottom: 1px solid #eee; 
    position: relative;
    padding-left: 50%;
  }
  table.default td.no-label {
    padding-left: 5px;
  }

  table.default td:before { 
    /* Now like a table header */
    position: absolute;
    /* Top/left values mimic padding */
    top: 6px;
    left: 6px;
    width: 45%; 
    padding-right: 10px; 
    white-space: nowrap;
    content: attr(data-label);
    font-weight: bold;
  }
  nav .navigation {
    margin: 45px 0 0 0;
  }
  nav .navigation li a {
    font-size: 12pt;
    padding: 5px 0 7px 0;
  }
  nav .navigation li {
    display: block;
    margin: 0 0 2px 0;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
  }
  nav .navigation li:hover > ul { 
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
  }
  nav .navigation li > ul {
    position: static;
    border: 0;
    padding: 0;
    margin: 0;

  }
  nav .navigation li > ul li {
    border: 0;  
    background-color: #f7f7f7;
  }

  nav .navigation li > ul li a {
    border: 0;
  }
  nav .navigation li > ul li:hover {
    background-color: #f7f7f7;
  }
}

/* ==|== print styles ======================================================= */

@media print {
  * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } 
  a, a:visited { text-decoration: underline; }
  a[href]:after { content: " (" attr(href) ")"; }
  abbr[title]:after { content: " (" attr(title) ")"; }
  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; } 
  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
  thead { display: table-header-group; }
  tr, img { page-break-inside: avoid; }
  img { max-width: 100% !important; }
  @page { margin: 0.5cm; }
  p, h2, h3 { orphans: 3; widows: 3; }
  h2, h3 { page-break-after: avoid; }
}

#line_numbers {clear:both; float: left; text-align: right}


@media (max-width:767px){body{padding-left:0;padding-right:0;}}

/*style for bibtex information of a defined document*/
#fieldset-bibTexGroup label {
  float: left;
  width: 125px;
}

